[package]
name = "MultiThreadWebServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.6.0-pre.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
log = "0.4.21"
crypto = "0.5.1"
rand_core = { version = "0.9.0-alpha.0",features = ["std","getrandom"] }
rand = "0.9.0-alpha.0"
aes = "0.8.4"
aead = "0.5.2"
orion = "0.17.6"
hex = "0.4.3"
rsa = "0.9.6"
